fix: addToHangar on mobile

--- a/app/javascript/stylesheets/frontend/partials/page-actions.scss
+++ b/app/javascript/stylesheets/frontend/partials/page-actions.scss
@@ -46,6 +46,10 @@
     &.page-actions-block {
       .panel-btn {
         margin-bottom: 20px;
+
+        &.panel-btn-inline {
+          margin-bottom: 0;
+        }
       }
     }
 
